# STM32_MCSDK_Project

./: .cproject  .gitignore  .mxproject  .project  B-G431B-ESC1_CordicPLLFF.ioc  B-G431B-ESC1_CordicPLLFF.ioc.wb  B-G431B-ESC1_CordicPLLFF.launch  B-G431B-ESC1_CordicPLLFF.settings  B-G431B-ESC1_CordicPLLFF.wbdef  B-G431B-ESC1_CordicPLLnoFF.ioc  B-G431B-ESC1_CordicPLLnoFF.ioc.wb  B-G431B-ESC1_CordicPLLnoFF.launch  B-G431B-ESC1_CordicPLLnoFF.settings  B-G431B-ESC1_CordicPLLnoFF.wbdef  B-G431B-ESC1_PLLCordicnoFF Debug.launch  B-G431B-ESC1_PLLCordicnoFF.ioc  B-G431B-ESC1_PLLCordicnoFF.ioc.wb  B-G431B-ESC1_PLLCordicnoFF.settings  B-G431B-ESC1_PLLCordicnoFF.wbdef  CMakeLists.txt  Makefile  STM32-for-VSCode.config.yaml  STM32Make.make
Debug/: makefile  objects.list  sources.mk
Debug/Application/User/: subdir.mk
Debug/Drivers/CMSIS/: subdir.mk
Debug/Drivers/STM32G4xx_HAL_Driver/: subdir.mk
Debug/Middlewares/MotorControl/: subdir.mk
Inc/: FreeRTOSConfig.h  aspep.h  debug_scope.h  drive_parameters._h_  drive_parameters.h  main.h  mc_api.h  mc_app_hooks.h  mc_config.h  mc_configuration_registers.h  mc_interface.h  mc_math.h  mc_parameters.h  mc_perf.h  mc_stm_types.h  mc_tasks.h  mcp_config.h  motorcontrol.h  parameters_conversion.h  parameters_conversion_g4xx.h  pmsm_motor_parameters.h  power_stage_parameters.h  register_interface.h  regular_conversion_manager.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h
MCSDK_v6.0.0-Full/MotorControl/MCSDK/MCLib/Any/Inc/: bus_voltage_sensor.h  current_ref_ctrl.h  digital_output.h  enc_align_ctrl.h  encoder_speed_pos_fdbk.h  fast_div.h  feed_forward_ctrl.h  flux_weakening_ctrl.h  gap_gate_driver_ctrl.h  hall_speed_pos_fdbk.h  inrush_current_limiter.h  max_torque_per_ampere.h  mc_type.h  mcp.h  mp_self_com_ctrl.h  ntc_temperature_sensor.h  open_loop.h  pid_regulator.h  pqd_motor_power_measurement.h  pwm_common.h  pwm_common_sixstep.h  pwm_curr_fdbk.h  pwmc_3pwm.h  pwmc_6pwm.h  r1_dd_pwm_curr_fdbk.h  r_divider_bus_voltage_sensor.h  ramp_ext_mngr.h  revup_ctrl.h  revup_ctrl_sixstep.h  speed_ctrl.h  speed_pos_fdbk.h  speed_regulator_potentiometer.h  speed_torq_ctrl.h  state_machine.h  sto_pll_speed_pos_fdbk.h  sto_speed_pos_fdbk.h  trajectory_ctrl.h  virtual_bus_voltage_sensor.h  virtual_speed_sensor.h
MCSDK_v6.0.0-Full/MotorControl/MCSDK/MCLib/Any/Src/: bus_voltage_sensor.c  circle_limitation.c  current_ref_ctrl.c  digital_output.c  enc_align_ctrl.c  encoder_speed_pos_fdbk.c  fast_div.c  feed_forward_ctrl.c  flux_weakening_ctrl.c  gap_gate_driver_ctrl.c  hall_speed_pos_fdbk.c  inrush_current_limiter.c  max_torque_per_ampere.c  mcp.c  mcptl.c  motor_control_protocol_sixstep.c  ntc_temperature_sensor.c  open_loop.c  pid_regulator.c  pqd_motor_power_measurement.c  pwm_common.c  pwm_common_sixstep.c  pwm_curr_fdbk_ovm.c  pwmc_3pwm.c  pwmc_6pwm.c  r_divider_bus_voltage_sensor.c  ramp_ext_mngr.c  revup_ctrl.c  revup_ctrl_sixstep.c  speed_ctrl.c  speed_pos_fdbk.c  speed_regulator_potentiometer.c  state_machine.c  (+5 more)
MCSDK_v6.1.0-Full/Documentation/html/: annotated.html  aspep_8c.html  aspep_8h.html  bemf__speed__pos__fdbk_8h.html  bus__voltage__sensor_8c.html  bus__voltage__sensor_8h.html  circle__limitation_8c.html  circle__limitation_8h.html  classes.html  current__ref__ctrl_8c.html  current__ref__ctrl_8h.html  deprecated.html  digital__output_8c.html  digital__output_8h.html  dir_03c8785333fb3459a02187d4b2937a86.html  dir_0520788fe017d3336444954afab40ae8.html  dir_081c32f9bfb52e8d41857b4347d9bcb5.html  dir_1bdeb8b1f699e77b0784d82f222769e8.html  dir_2e26b91799a13189c4af685e9d99e18a.html  dir_3570ea9c197ad6f061672df26cacd3e0.html  dir_413f4e031a85da0d68269c6fd2f76e1c.html  dir_420a3568dc979415a3199b445c0a937c.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_55036d0fa0d676bc1472568acbdf9318.html  dir_5b4e4488981afc885981076f021632ea.html  dir_5ebbea1114bd7627641b9c8b89cd5b2b.html  dir_60e784e88e9f3e018b3cca5fa1ec1200.html  dir_61f0d10948f5c03683e312f82e2b1d5a.html  dir_67df1cd1198ad09860cb291bdfcb6215.html  dir_6b051935d1db8e145cf381cfbc33c758.html  dir_79d4adb0498bf053227c39dbd6578f5f.html  dir_80bc119df44e2dd44e2c73626e7f1f08.html  dir_8571c31c364afbb296ea948ef5443aab.html  dir_925d247c58b29cf6448ddc0d8f355838.html  dir_9fea3fb0dfcc6f370077182e8a006c5b.html  dir_a44be57d8ca6fd7603be648a9f4eb13c.html  dir_a522024527a383e5a20be987d50365f6.html  dir_ab5744e207d2471ab460b2b44cfb348b.html  dir_acbc0eb373e73acf10cb38c64edcb2ae.html  dir_b0409bfddfcf8c11bf71ed6ee5d1aca8.html  (+443 more)
MCSDK_v6.1.0-Full/Documentation/html/mathjax/extensions/: MathEvents.js  MathMenu.js  MathZoom.js  tex2jax.js
MCSDK_v6.1.0-Full/Documentation/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+142 more)
MCSDK_v6.1.0-Full/MotorControl/: MotorControl_Configs.xml  MotorControl_Modes.xml
MCSDK_v6.1.2-Full/MotorControl/: MotorControl_Configs.xml  MotorControl_Modes.xml
MotorParametersLib/: MT4008-12Pair-12V.xml
MotorParametersLib/MCSDK_6.0/MT4008-12Pair-12V/: .mxproject  MT4008-12Pair-12V.ioc.wb  MT4008-12Pair-12V.settings  MT4008-12Pair-12V.stwb6  MT4008-12Pair-12V.wbdef
MotorParametersLib/MCSDK_6.0/MT4008-12Pair-12V/Inc/: drive_parameters.h  parameters_conversion.h  pmsm_motor_parameters.h
MotorParametersLib/MT4008-12Pair-12V/: MT4008-12Pair-12V.ioc
MotorParametersLib/MT4008-12Pair-12V/Inc/: power_stage_parameters.h
STM32CubeIDE/: .cproject.bak  .project.bak
Src/: debug_scope.c  main.c  mc_api.c  mc_app_hooks.c  mc_config.c  mc_configuration_registers.c  mc_interface.c  mc_math.c  mc_parameters.c  mc_perf.c  mc_tasks.c  motorcontrol.c  pwm_curr_fdbk.c  register_interface.c  regular_conversion_manager.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c  stm32g4xx_mc_it.c
(+201 files in other folders)
